--- a/picster/res/layout/activity_home.xml
+++ b/picster/res/layout/activity_home.xml
@@ -14,7 +14,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_picture" />
-    
+
+      <com.devsmart.android.ui.HorizontalListView
+          android:id="@+id/user_picture_row"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"/>
+    <ListView
+        android:id="@+id/pictureListView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/transparent" />
+
     <ImageView
         android:id="@+id/chosen_picture"
         android:layout_width="wrap_content"
