--- a/picster/res/layout/picture_list_item.xml
+++ b/picster/res/layout/picture_list_item.xml
@@ -5,7 +5,8 @@
 	
 	<ImageView
         android:id="@+id/daily_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:scaleType="centerCrop"
+        android:layout_width="125dp"
+        android:layout_height="125dp" />
 	
 </LinearLayout>
