--- a/picster/res/layout/picture_list_item.xml
+++ b/picster/res/layout/picture_list_item.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingRight="2dp"
@@ -42,4 +42,4 @@
         android:scaleType="centerCrop"
         android:layout_width="125dp"
         android:layout_height="125dp" />
-</RelativeLayout>
+</LinearLayout>
